background images and text

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
                 <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div>
+                <img src="./images/mountains.jpg" alt="mountains">
+                <p>Welcome to my page!</p>
+            </div>
     </header>
 
-    <img class="mainimage" src="/" alt="fishing at the lake">
+    <main>
+        <section>
+            <h2>Bio</h2>
 
+        </section>
+    </main>
 
 </body>
