--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
                 <p>Welcome to my page!</p>
             </div>
     </header>
+    <section id="Bio" class="portfolio-body">
+        <div>
+            <h3>Bio</h3>
+        </div>
+        <div>
+            <img src="">
+        </div>
 
-    <main>
-        <section>
-            <h2>Bio</h2>
-
-        </section>
-    </main>
+    </section>
 
 </body>
