--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#Contact">Contact</a></li>
                 </ul>
             </nav>
-            <div>
+            <div>ß
                 <img src="./images/mountains.jpg" alt="mountains">
                 <p>Welcome to my page!</p>
             </div>
