--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#Contact">Contact</a></li>
                 </ul>
             </nav>
-            <div>ß
+            <div>
                 <img src="./images/mountains.jpg" alt="mountains">
                 <p>Welcome to my page!</p>
             </div>
@@ -29,7 +29,7 @@
         <div>
             <img src="./images/applepizza.JPG" alt="Zac eating pizza" class="mephoto">
         </div>
-        <p>
+        <p id="biotext">
             Selig sind, die da Leid tragen, denn sie sollen getröstet werden. Die mit Tränen säen, werden mit Freuden ernten.
             Sie gehen hin und weinen und tragen edlen Samen, und kommen mit Freuden und bringen ihre Garben.
             Denn alles Fleisch ist wie Gras und alle Herrlichkeit des Menschen wie des Grases Blumen. Das Gras ist verdorret und die Blume abgefallen.
@@ -46,7 +46,7 @@
                 <a href="#" target="_blank"></a>
                 <div class="music-card-title">
                     <h3>Music</h3>
-                    <p>Performance & Composition</p>
+                        <p>Performance & Composition</p>
                 </div>
             </div>
             <div>
@@ -54,7 +54,7 @@
                     <a href="#" target="_blank"></a>
                     <div class="making-card-title">
                         <h3>School</h3>
-                        <p>Construction & Setup</p>
+                            <p>Construction & Setup</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     <a href="#" target="_blank"></a>
                     <div class="coffee-card-title">
                         <h3>Coffee:</h3>
-                        <p>More than a drink</p>
+                            <p>More than a drink</p>
                     </div>
                 </div>
             </div>
@@ -71,14 +71,14 @@
                 <a href="#" target="_blank"></a>
                 <div class="coding-card-title">
                     <h3>Aspirations</h3>
-                    <p>Full Stack / AI</p>
+                        <p>Full Stack / AI</p>
                 </div>
             </div>
             <div id="mtg-card" class="sub-card">
                 <a href="#" target="_blank"></a>
                 <div class="mtg-card-title">
                     <h3>Magic: The Gathering</h3>
-                    <p>The card game we both need and deserve</p>
+                        <p>The card game we both need and deserve</p>
                 </div>
             </div>
         </div>
@@ -87,8 +87,7 @@
         <div class="sectionid">
             <h3>Contact</h3>
         </div>
-        <div class="cards">
-            <ul>
+            <ul class="contactpoints">
                 <li>Phone: 555 867 5309</li>
                 <li>Email: zjgoad@gmail.com</li>
                 <li>github: <a href="https://github.com/zjg39"></a></li>
