monday morning commit

--- a/index.html
+++ b/index.html
@@ -8,74 +8,79 @@
 </head>
 
 <body>
-    <header>
-        <h1>ZAC GOAD</h1>
-            <nav>
-                <ul>
-                <li><a href="#Bio">Bio</a></li>
-                <li><a href="#Work">Work</a></li>                                
-                <li><a href="#Contact">Contact</a></li>
-                </ul>
-            </nav>
-            <div>
-                <img src="./images/mountains.jpg" alt="mountains">
-                <p>Welcome to my page!</p>
-            </div>
-    </header>
-    <main>
-        <section class="mobilecolumn rowdesktop">
+        <header>
+            <h1>ZAC GOAD</h1>
+                <nav>
+                    <ul>
+                    <li><a href="#Bio">Bio</a></li>
+                    <li><a href="#Work">Work</a></li>                                
+                    <li><a href="#Contact">Contact</a></li>
+                    </ul>
+                </nav>
+                <div>
+                    <img src="./images/mountains.jpg" alt="mountains">
+                    <p>Welcome to my page!</p>
+                </div>
+        </header>
+        <main>
+            <section class="mobilecolumn rowdesktop">
+                <div class="width25">
+                    <h2>BIO</h2>
+                </div>
+                        <div class="biorow">
+                            <img class="mephoto" src="./images/fishing.jpeg">
+                            <p>
+                                Selig sind, die da Leid tragen, denn sie sollen getröstet werden. Die mit Tränen säen, werden mit Freuden ernten.
+                                Sie gehen hin und weinen und tragen edlen Samen, und kommen mit Freuden und bringen ihre Garben.
+                                Denn alles Fleisch ist wie Gras und alle Herrlichkeit des Menschen wie des Grases Blumen. Das Gras ist verdorret und die Blume abgefallen.
+                                So seid nun geduldig, lieben Brüder, bis auf die Zukunft des Herrn. Siehe, ein Ackermann wartet auf die köstliche Frucht der Erde und is geduldig darüber, bis er empfahe den Morgenregen und Abendregen.
+                                Aber des Herrn Wort bleibet in Ewigkeit. Die Erlöseten des Herrn werden wieder kommen, und gen Zion kommen mit Jauchzen; ewige Freude wird 
+                                über ihrem Haupte sein; Freude und Wonne werden sie ergreifen und Schmerz und Seufzen wird weg müssen.
+                                Herr, lehre doch mich, daß ein Ende mit mir haben muß, und mein Leben ein Ziel hat, und ich davon muß.
+                                Siehe, meine Tage sind einer Hand breit vor dir, und mein Leben ist wie nichts vor dir.
+                                Ach, wie gar nichts sind alle Menschen, die doch so sicher leben. Sie gehen daher wie ein Schemen, und machen ihnen viel vergebliche Unruhe; sie sammeln und wissen nicht wer es kriegen vird. Nun Herr, wess soll ich mich trösten? Ich hoffe auf dich.
+                            </p>
+                        </div>
+            </section>
+            <section class="mobilecolumn rowdesktop">
+                <div class="width25">
+                    <h2>WORK</h2>
+                </div>
+                    <div class="musicrow">
+                        <h3 class="overlaytextboxmain">PERFORMANCE</h3>
+                        <img class="musicphoto" src="./images/tecchlercello.jpeg">
+                    </div>
+            </section>
+            <section>
+                    <div class="secondrow">
+                        <div class="violinmakingbox">
+                            <h3 class="overlaytextboxsub">VIOLINMAKING</h3>
+                            <img class="stradivariphoto" src="./images/stradpainting.jpeg">
+                        </div>
+                        <div class="codingbox">
+                            <h3 class="overlaytextboxsub">ASPIRATIONS</h3>
+                            <img class="codingphoto" src="./images/codingshot2.jpeg">
+                        </div>
+                    </div>
+            </section>
+            <section>
+                <div class="thirdrow">
+                    <div class="coffeebox">
+                        <h3 class="overlaytextboxsub">COFFEE: A LIFESTYLE</h3>
+                        <img class="coffeephoto" src="./images/roaster.jpeg">
+                    </div>
+                    <div class="mtgbox">
+                        <h3 class="overlaytextboxsub">MTG: MODERN</h3>
+                        <img class="magicphoto" src="./images/ravnica.png">
+                    </div>
+                </div>
+            </section>
+        <section class="contactrow">
             <div class="width25">
-                <h2>BIO</h2>
+                <h2>CONTACT</h2>
             </div>
-                    <div class="biorow">
-                        <img class="mephoto" src="./images/fishing.jpeg">
-                        <p>
-                            Selig sind, die da Leid tragen, denn sie sollen getröstet werden. Die mit Tränen säen, werden mit Freuden ernten.
-                            Sie gehen hin und weinen und tragen edlen Samen, und kommen mit Freuden und bringen ihre Garben.
-                            Denn alles Fleisch ist wie Gras und alle Herrlichkeit des Menschen wie des Grases Blumen. Das Gras ist verdorret und die Blume abgefallen.
-                            So seid nun geduldig, lieben Brüder, bis auf die Zukunft des Herrn. Siehe, ein Ackermann wartet auf die köstliche Frucht der Erde und is geduldig darüber, bis er empfahe den Morgenregen und Abendregen.
-                            Aber des Herrn Wort bleibet in Ewigkeit. Die Erlöseten des Herrn werden wieder kommen, und gen Zion kommen mit Jauchzen; ewige Freude wird 
-                            über ihrem Haupte sein; Freude und Wonne werden sie ergreifen und Schmerz und Seufzen wird weg müssen.
-                            Herr, lehre doch mich, daß ein Ende mit mir haben muß, und mein Leben ein Ziel hat, und ich davon muß.
-                            Siehe, meine Tage sind einer Hand breit vor dir, und mein Leben ist wie nichts vor dir.
-                            Ach, wie gar nichts sind alle Menschen, die doch so sicher leben. Sie gehen daher wie ein Schemen, und machen ihnen viel vergebliche Unruhe; sie sammeln und wissen nicht wer es kriegen vird. Nun Herr, wess soll ich mich trösten? Ich hoffe auf dich.
-                        </p>
-                    </div>
-        </section>
-        <section class="mobilecolumn rowdesktop">
-            <div class="width25">
-                <h2>WORK</h2>
-            </div>
-                <div class="musicrow">
-                    <h3 class="overlaytextboxmain">PERFORMANCE</h3>
-                    <img class="musicphoto" src="./images/tecchlercello.jpeg">
-                </div>
-        </section>
-        <section>
-                <div class="secondrow">
-                    <div class="violinmakingbox">
-                        <h3 class="overlaytextboxsub">VIOLINMAKING</h3>
-                        <img class="stradivariphoto" src="./images/stradpainting.jpeg">
-                    </div>
-                    <div class="codingbox">
-                        <h3 class="overlaytextboxsub">ASPIRATIONS</h3>
-                        <img class="codingphoto" src="./images/codingshot2.jpeg">
-                    </div>
-                </div>
-        </section>
-        <section>
-            <div class="thirdrow">
-                <div class="coffeebox">
-                    <h3 class="overlaytextboxsub">COFFEE: A LIFESTYLE</h3>
-                    <img class="coffeephoto" src="./images/roaster.jpeg">
-                </div>
-                <div class="mtgbox">
-                    <h3 class="overlaytextboxsub">MTG: MODERN</h3>
-                    <img class="magicphoto" src="./images/ravnica.png">
-                </div>
-            </div>
-        </section>
 
+        </section>
     </main>
 </body>
 </html>
