--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
             <section class="mobilecolumn rowdesktop">
                 <div class="width25">
-                    <h2>BIO</h2>
+                    <h2 id="Bio">BIO</h2>
                 </div>
                         <div class="biorow">
                             <img class="mephoto" src="./images/fishing.jpeg">
@@ -44,21 +44,21 @@
             </section>
             <section class="mobilecolumn rowdesktop">
                 <div class="width25">
-                    <h2>WORK</h2>
+                    <h2 id="Work">WORK</h2>
                 </div>
                     <div class="musicrow">
-                        <h3 class="overlaytextboxmain">PERFORMANCE</h3>
                         <img class="musicphoto" src="./images/tecchlercello.jpeg">
+                        <h3 class="maincard" id="littlecardhover">PERFORMANCE</h3>
                     </div>
             </section>
             <section>
                     <div class="secondrow">
                         <div class="violinmakingbox">
-                            <h3 class="overlaytextboxsub">VIOLINMAKING</h3>
+                            <h3 class="littlecard1" id="littlecardhover">VIOLINMAKING</h3>
                             <img class="stradivariphoto" src="./images/stradpainting.jpeg">
                         </div>
                         <div class="codingbox">
-                            <h3 class="overlaytextboxsub">ASPIRATIONS</h3>
+                            <h3 class="littlecard2" id="littlecardhover">ASPIRATIONS</h3>
                             <img class="codingphoto" src="./images/codingshot2.jpeg">
                         </div>
                     </div>
@@ -66,21 +66,25 @@
             <section>
                 <div class="thirdrow">
                     <div class="coffeebox">
-                        <h3 class="overlaytextboxsub">COFFEE: A LIFESTYLE</h3>
+                        <h3 class="littlecard3" id="littlecardhover">ROASTING</h3>
                         <img class="coffeephoto" src="./images/roaster.jpeg">
                     </div>
                     <div class="mtgbox">
-                        <h3 class="overlaytextboxsub">MTG: MODERN</h3>
+                        <h3 class="littlecard4" id="littlecardhover">MTG: MODERN</h3>
                         <img class="magicphoto" src="./images/ravnica.png">
                     </div>
                 </div>
             </section>
-        <section class="contactrow">
-            <div class="width25">
-                <h2>CONTACT</h2>
-            </div>
-
-        </section>
+            <footer class="footer" id="Contact">
+                <h2 class="contactblock">CONTACT</h2>
+                    <div>
+                        <ul>
+                            <li><a href="https://github.com/zjg39" target="_blank">GITHUB</a></li>
+                            <li><a href="https://youtu.be/boaJCrHNRMA" target="_blank">PHONE: 555 867 5309</a></li>
+                            <li><a href="https://www.amazon.com/produce-aisle-Russet-Potato-Large/dp/B000NSKB7Q/ref=sr_1_4_0o_fs?dchild=1&keywords=potato&qid=1631669840&sr=8-4" target="_blank">EMAIL ME!</a></li>
+                        </ul>
+                    </div>
+            </footer>
     </main>
 </body>
 </html>
