--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     <div class="secondrow">
                         <div class="violinmakingbox">
                             <h3 class="littlecard1" id="littlecardhover">VIOLINMAKING</h3>
-                            <img class="stradivariphoto" src="./images/stradpainting.jpeg">
+                            <a href="https://www.vmsa.net/" target="_blank"><img class="stradivariphoto" src="./images/stradpainting.jpeg"></a>
                         </div>
                         <div class="codingbox">
                             <h3 class="littlecard2" id="littlecardhover">ASPIRATIONS</h3>
-                            <img class="codingphoto" src="./images/codingshot2.jpeg">
+                            <a href="https://zjg39.github.io/HoriseonRefactor-HW01/" target="_blank"><img class="codingphoto" src="./images/codingshot2.jpeg"></a>
                         </div>
                     </div>
             </section>
@@ -67,11 +67,11 @@
                 <div class="thirdrow">
                     <div class="coffeebox">
                         <h3 class="littlecard3" id="littlecardhover">ROASTING</h3>
-                        <img class="coffeephoto" src="./images/roaster.jpeg">
+                        <a href="https://youtu.be/N8meCjVsJWI" target="_blank"><img class="coffeephoto" src="./images/roaster.jpeg"></a>
                     </div>
                     <div class="mtgbox">
                         <h3 class="littlecard4" id="littlecardhover">MTG: MODERN</h3>
-                        <img class="magicphoto" src="./images/ravnica.png">
+                        <a href="https://youtu.be/3Q5NcIY5njA" target="_blank"><img class="magicphoto" src="./images/ravnica.png"></a>
                     </div>
                 </div>
             </section>
